# Glance

./: .gitignore  App.xaml  Glance.sln  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  app.manifest  test-phase2.cs
Properties/: launchSettings.json
TestDllLoad/: Program.cs
docs/: README.md  index.html  script.js  style.css
native/glance-native/: Cargo.toml  README.md
native/glance-native/src/: lib.rs
native/glance-native/src/annotations/: mod.rs  models.rs  processor.rs
native/glance-native/src/ffi/: bindings.rs  marshalling.rs  mod.rs
native/glance-native/src/rendering/: image_utils.rs  mod.rs  pdf_engine.rs
native/glance-native/src/storage/: file_handler.rs  json_adapter.rs  mod.rs
native/glance-native/src/utils/: error.rs  logging.rs  mod.rs
src/: App.xaml.cs  Glance.csproj  MainPage.xaml.cs  Package.appxmanifest  README.md
src/Interop/: AsyncBridge.cs  GlanceNative.cs
src/Services/: AnnotationService.cs  PdfRenderService.cs  PersistenceService.cs
src/Tests/: README.md
