[package]
name = "glance-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdfium-render = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.51", features = ["Win32_Foundation"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
